--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="your-image-url.jpg" alt="Lakshmi chaithanya" width="200">
+
+    <h1>Lakshmi Chaitanya</h1>
+    <p>
+        Connect with me on <a href="Lakshmi Chaitanya" target="_blank">LinkedIn</a>
+        
+    </p>
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>
+            - Html <br>
+            - Css<br>
+            - Python<br>
+            - C
+        </p>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Project 1:Toll tax collection</li>
+            <li>Project 2:Solar-wind based hybrid system</li>
+    
+        </ul>
+    </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
