--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
     <h1>Lakshmi Chaitanya</h1>
     <p>
-        Connect with me on <a href="Lakshmi Chaitanya" target="_blank">LinkedIn</a>
+        Connect with me on <a href="https://www.linkedin.com/in/lakshmi-chaitanya-8984b3217/" target="_blank">LinkedIn</a>
         
     </p>
     <section id="skills">
